<resources>
    <string name="app_name">SmileKnect</string>
    <string name="loginMsg">Please log in to SmileKnect!</string>
    <string name="failed" />
    <string name="email_id">Email</string>
    <string name="password">Enter password</string>
    <string name="login">Log In</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="image">eversmile</string>
    <string name="logout">LogOut</string>
    <string name="the_activity_after_the_user_login">The Activity after the user Login</string>
    <string name="linktoterms"><a href="http://www.google.com">  Link to Terms</a></string>
    <string name="seeBtn">Picture Your Smile</string>
    <string name="findBtn">Find Your Smile</string>
    <string name="shareBtn">Share Your Smile</string>
    <string name="facebook_app_id">2129225573819941</string>
    <string name="fb_login_protocol_scheme">fb2129225573819941</string>
    <string name="take_face">Face\nPhoto</string>
    <string name="take_left">Left\nPhoto</string>
    <string name="take_right">Right\nPhoto</string>
    <string name="view_pics">Gallery</string>
    <string name="everSmile_title">SmileKnect</string>
    <string name="main_menu">Home</string>
    <string name="camera">Take\nPhotos</string>
    <string name="clientId">04a54c46fd4a496b8da58175bbe4d567</string>
    <string name="clientSecret">89ab8c82496f4fb1bb17386e3238c5c1</string>
    <string name="access_token">11618093010.04a54c4.b7203c173c2342d1a6d1d97b6997bbb1</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=11618093010.04a54c4.b7203c173c2342d1a6d1d97b6997bbb1</string>
    <string name="callbackUrl">https://oceanwp.org/instagram/</string>
    <string name="com_auth0_client_id">lEi8o78oafHdOKPjzmvw2PVOCifQ6o68</string>
    <string name="com_auth0_domain">ever-smile.auth0.com</string>
    <string name="action_settings">Settings</string>
    <string name="twitter_consumer_secret">f6eNzCE8xNozHlVAA9yveGJY4uDzy2d1YFIki42oUn0kEd3c60</string>
    <string name="twitter_consumer_key">wp9Jwe09zQIf57e5BlXl1aQII</string>
    <string name="Twitter_Access_Token">1104877713305858048-L51MVbfiyHtr0AI6SOGoTve4n190LS</string>
    <string name="Twitter_Secret_Token">2C2Ai6oA6l73niDxO6fzQkC7KgWu6c0qacOpeSUew7cat</string>
    <string name="custom_log_in_with_twitter">Custom Log in with Twitter</string>
    <string name="get_profile_image">Fetch Profile Image</string>
    <string name="share_activity">Share Activity Demo</string>
    <string name="shared_activity">Shared Activity Demo</string>
    <string name="imageview">Share ImageView</string>
    <string name="share_image">Share Image</string>
    <string name="share_text">Share Text</string>
    <string name="select_image">Select Image</string>
    <string name="enter_text">Enter something to share</string>
    <string name="shared_text">Shared Text</string>
    <string name="shared_image">Shared Image</string>
    <string name="google_maps_key">AIzaSyDrNMGTZ9AMp39n11GXFESQf6i-gH7BQrs</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_location">Map</string>
    <string name="store">Upload\nPhotos</string>
    <string name="storeNote">Upload\nNote</string>
    <string name="shareFacebook">Share to Facebook</string>
    <string name="shareTwitter">Share to Twitter</string>
    <string name="shareInstagram">Share to Instagram</string>
    <string name="shareSnapchat">Share to Snapchat</string>
    <string name="backGal">Back to\nGallery</string>
    <string name="nearbyOrthos">Nearby\nDoctors</string>
    <string name="note">Add\nNote</string>
    <string name="userName">FirebaseAuth.getInstance().getCurrentUser().getEmail()</string>
    <string name="bookappointment">Schedule With SmileKnect</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="SetUpProfile">Patient Form</string>
    <string name="DeletePictures">Delete\nphotos</string>
</resources>
