<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FacebookBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/shareFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareFacebook" />

    <Button
        android:id="@+id/shareTwit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareTwitter" />

    <Button
        android:id="@+id/shareInsta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareInstagram" />

    <Button
        android:id="@+id/shareSnap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareSnapchat" />

    <Button
        android:id="@+id/shareMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu" />

</LinearLayout>