<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".see_eversmile"
    android:paddingBottom="40dp"
    >

    <TextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/divider_gallery"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/btn_takepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/take_face"
        android:padding="5dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_leftpicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/btn_takepicture"
        android:background="@color/colorPrimary"
        android:text="@string/take_left"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_rightpicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/btn_takepicture"
        android:background="@color/colorPrimary"
        android:text="@string/take_right"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_viewpics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_takepicture"
        android:layout_alignEnd="@+id/btn_takepicture"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/view_pics"
        android:textColor="@color/white"
        tools:text="Gallery" />

    <View
        android:id="@+id/divider_gallery"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/btn_viewpics"
        android:layout_marginBottom="0dp"
        android:background="@color/colorAccent" />

</RelativeLayout>