<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FacebookBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SeeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:height="0dp"
        android:background="@color/colorAccent"
        android:text="@string/seeBtn"
        android:textColor="@color/com_facebook_button_background_color_focused" />

    <Button
        android:id="@+id/FindBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/SeeBtn"
        android:height="0dp"
        android:background="@color/colorAccent"
        android:text="@string/findBtn"
        android:textColor="@color/com_facebook_button_background_color_focused" />

    <Button
        android:id="@+id/ShareBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:height="0dp"
        android:layout_below="@+id/FindBtn"
        android:background="@color/colorAccent"
        android:text="@string/shareBtn"
        android:textColor="@color/com_facebook_button_background_color_focused" />

    <Button
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:height="0dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/ShareBtn"
        android:text="@string/logout"
        android:textColor="@color/com_facebook_button_background_color_focused" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/SeeBtn"
        android:layout_marginEnd="0dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/eversmile" />

</RelativeLayout>